[gd_scene load_steps=13 format=3 uid="uid://b6jg6njwa37da"]

[ext_resource type="Theme" uid="uid://cc203wnbg77sb" path="res://resources/themes/menu.theme" id="1_rf8uy"]
[ext_resource type="Script" path="res://scenes/project_manager.gd" id="1_rryq6"]
[ext_resource type="Texture2D" uid="uid://bqkw67f3ey46h" path="res://resources/themes/plus.svg" id="3_unyqo"]
[ext_resource type="Texture2D" uid="uid://bkb6hyrffjxlq" path="res://resources/themes/folder.svg" id="4_csqmn"]
[ext_resource type="Texture2D" uid="uid://c2kr2kifcs4yc" path="res://resources/themes/settings.svg" id="5_5tm0h"]
[ext_resource type="Texture2D" uid="uid://bw60ho2s4y84t" path="res://resources/themes/wrench.svg" id="6_gca4t"]
[ext_resource type="Texture2D" uid="uid://d3y5186u78brm" path="res://resources/themes/redo.svg" id="6_qiwro"]
[ext_resource type="Texture2D" uid="uid://ddlsrj8v0qiuv" path="res://resources/themes/search_nomod.svg" id="7_218y8"]
[ext_resource type="Texture2D" uid="uid://cfx2ivv7ag1q0" path="res://resources/themes/github-mark-white.svg" id="8_2w5n4"]
[ext_resource type="FontFile" uid="uid://dqqjkq3x4dmnb" path="res://assets/fira-code-regular.ttf" id="10_hfjao"]
[ext_resource type="Script" path="res://scenes/logo_label.gd" id="11_tjm2u"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_e1eln"]
color = Color(0.141176, 0.152941, 0.227451, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rryq6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HSplitContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 8

[node name="Control" type="Control" parent="MarginContainer/HSplitContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/PanelContainer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.647059, 0.678431, 0.796078, 1)
theme_override_font_sizes/font_size = 14
text = "recent files"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HSplitContainer/PanelContainer/MarginContainer/Control/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/separator = SubResource("StyleBoxLine_e1eln")

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
split_offset = 585

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 8

[node name="Control" type="Control" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.647059, 0.678431, 0.796078, 1)
theme_override_font_sizes/font_size = 14
text = "nav"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer/Control/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/separator = SubResource("StyleBoxLine_e1eln")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="NewFile" type="Button" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "new file"
icon = ExtResource("3_unyqo")
expand_icon = true

[node name="OpenFile" type="Button" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "open file"
icon = ExtResource("4_csqmn")
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Preferences" type="Button" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "preferences"
icon = ExtResource("5_5tm0h")
expand_icon = true

[node name="ManageMods" type="Button" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "manage mods"
icon = ExtResource("6_gca4t")
expand_icon = true

[node name="CheckForUpdates" type="Button" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(148, 0)
layout_mode = 2
text = "check for updates"
icon = ExtResource("6_qiwro")
expand_icon = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OpenDocs" type="Button" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "open docs"
icon = ExtResource("7_218y8")
expand_icon = true

[node name="Contribute" type="Button" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "contribute"
icon = ExtResource("8_2w5n4")
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("1_rf8uy")
theme_override_colors/font_color = Color(0.803922, 0.839216, 0.956863, 1)
theme_override_fonts/font = ExtResource("10_hfjao")
theme_override_font_sizes/font_size = 12
text = "   __                              ___
__\\  \\__  _____   _____   _____   _\\  \\   _____   _____
\\__   __\\(  \\\\ \\ (  \\\\ \\ (  \\\\ \\ (  \\\\ \\ (  \\\\ \\ (  \\\\ \\
  _\\  \\   \\  \\\\ \\ \\  \\\\ \\ \\  \\\\ \\ \\  \\\\ \\ \\  \\\\ \\ \\  \\\\ \\
  \\____)   \\_____) \\___  \\ \\_____) \\_____) \\_____) \\_____) (_)
__  __  __  __  __    _\\  \\
\\√\\ \\√\\ \\√\\ \\√\\ \\√\\  \\_____) A tree-based todo app
"
script = ExtResource("11_tjm2u")

[node name="Timer" type="Timer" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer2/Label"]
wait_time = 0.5
autostart = true

[node name="Label2" type="Label" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "v1.0.0"
horizontal_alignment = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HSplitContainer/VSplitContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 8

[node name="Control" type="Control" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer2/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.647059, 0.678431, 0.796078, 1)
theme_override_font_sizes/font_size = 14
text = "templates"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer2/MarginContainer/Control/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/separator = SubResource("StyleBoxLine_e1eln")

[connection signal="pressed" from="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer/NewFile" to="." method="_on_new_file_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer/OpenFile" to="." method="_on_open_file_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer/Preferences" to="." method="_on_preferences_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer/Contribute" to="." method="_on_contribute_pressed"]
[connection signal="timeout" from="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer2/Label/Timer" to="MarginContainer/HSplitContainer/VSplitContainer/PanelContainer/MarginContainer2/HBoxContainer/VBoxContainer2/Label" method="_on_timer_timeout"]
